Use travel dev team mail in debian files

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ travel (0.0-1) jessie; urgency=medium
 
   * New upstream
 
- -- GRNET Travel Expenses Team <webapps@lists.grnet.gr>  Mon, 25 Sep 2017 11:06:28 +0300
+ -- GRNET Travel Expenses Team <travel@dev.grnet.gr>  Mon, 25 Sep 2017 11:06:28 +0300
